@startuml RubyGYM_Class
skinparam classAttributeIconSize 0

class User {
  - id: int
  - email: string
  - password_hash: string
  - full_name: string
  - phone: string
  - role: enum(ADMIN, TRAINER, MEMBER)
  - created_at: timestamp
  + register()
  + login()
}

class Trainer {
  - id: int
  - user_id: int
  - specialization: string
  - max_daily_hours: int
  + getClients()
  + createSession()
  + evaluateMember()
}

class Member {
  - id: int
  - user_id: int
  - trainer_id: int
  - join_date: date
  - current_weight: decimal
  - height_cm: decimal
  - is_loyal: boolean
  - referred_by: int
  + completeOnboarding()
  + viewSchedule()
  + viewEvaluation()
  + referFriend()
}

class TrainingGoal {
  - id: int
  - member_id: int
  - goal_type: string
  - target_weight: decimal
  - target_bmi: decimal
  - target_date: date
  - notes: text
  - updated_at: timestamp
  + setByMember()
  + readByTrainer()
}

class Subscription {
  - id: int
  - member_id: int
  - plan_type: enum(QUARTERLY, SEMI_ANNUAL, ANNUAL)
  - start_date: date
  - end_date: date
  - is_free_extension: boolean
  - status: enum(ACTIVE, EXPIRED, CANCELLED)
  + activate()
  + renew()
  + cancel()
}

class TrainingSession {
  - id: int
  - trainer_id: int
  - session_date: date
  - start_time: time
  - end_time: time
  + addMember()
  + removeMember()
  + validateConstraints()
}

class MonthlyEvaluation {
  - id: int
  - member_id: int
  - trainer_id: int
  - month_year: date
  - target_weight: decimal
  - actual_weight: decimal
  - target_bmi: decimal
  - actual_bmi: decimal
  - notes: text
}

class Event {
  - id: int
  - title: string
  - description: text
  - event_date: timestamp
  - created_by: int
}

User "1" -- "0..1" Trainer
User "1" -- "0..1" Member
Trainer "1" -- "*" Member : assigns
Trainer "1" -- "*" TrainingSession : creates
Member "*" -- "*" TrainingSession : participates
Member "1" -- "*" Subscription
Member "1" -- "0..1" TrainingGoal : owns / sets
Trainer ..> TrainingGoal : reads (read-only)
Trainer "1" -- "*" MonthlyEvaluation : writes
Member "1" -- "*" MonthlyEvaluation : receives
User "1" -- "*" Event : creates
Member "1" -- "*" Member : refers
@enduml
